--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap&#39;);
 
 :root {
     --cor-de-fundo: #1E1E1E;
@@ -37,8 +36,9 @@ body {
     color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Chakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -60,13 +60,22 @@ body {
 .botoes {
     display: block;
 }
-@media screen and(min-width: 768px){
-    .botoes{
-        display: flex;
 
+.ativo {
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
     }
-    .botao::first-child{
+
+    .botao:first-child {
         border-radius: 40px 0 0 0;
     }
-    
+
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
+    }
 }
